css/style.css
.container{
	height: 100%;
	position: relative;
}

html, body {
	height: 100%;
	maring: 0;
	padding: 0;
}

h1 {
	color: #696969;
	text-transform: uppercase;
	opacity: none;
	font-size: 40px;
	margin: 0 30 10px 0;
	text-align: center;
	font-family: "PT Serif";
}

#map {
	border: 2px solid #D3D3D3;
	bottom:0px;
	left: 360px;
	position: absolute;
	height: 100%;
	right: 0px;
}

.sidebar {
	background-image: url(capital.jpg);
	border: 2px solid #D3D3D3;
	height: 100%;
	line-height: 35px;
	padding: 5px 5 px 5px 5px;
	text-align: left;
	width: 345px;
}

.searchbar {
	width: 250px;
	margin-left: 10px;

}

.landmarkList {

  margin-right: 50px;
  background-color: #ffffff;
  border: 1px solid #D3D3D3;
  opacity: 0.6;
  filter: alpha(opacity=60); 

}

.search-bar-main {
  margin: 30px;
  
}


.form-container {
	margin-top: 20px;
	margin-left: 50px;
}

#pano {
    width: 200px;
    height: 200px;
}



@media only screen and (max-width: 750px) {
	#map {
		width: 90px;
		display: block;
		height: 100%
	}
}

